# sic

./: LICENSE  README.md  pyproject.toml  sic.py
